# hitokoto-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  converter.py  docker-compose.yml
.github/workflow/: build.yml
.github/workflows/: build.yml  docker.yml
src/: counter.rs  db.rs  init.rs  main.rs
