[package]
name = "hitokoto-rust"
version = "0.5.0"
edition = "2024"

[features]
mimalloc = ["dep:mimalloc"]

[dependencies]
actix-web = "4.10.2"
clap = { version = "4.5.32", features = ["derive", "env"] }
num_cpus = "1.16.0"
serde = { version = "1.0.219", features = ["derive"] }
simd-json = "0.15.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "all-databases"] }
mimalloc = { version = "0.1.44", optional = true }
rand = "0.9.0"
actix-governor = "0.8.0"

[profile.release]
lto = true
panic = "abort"
