[package]
name = "hitokoto-rust"
version = "0.5.0"
edition = "2024"

[features]
default = ["mimalloc", "init"]
mimalloc = ["dep:mimalloc"]
init = ["dep:reqwest", "dep:serde_json"]

[dependencies]
actix-web = "4.10.2"
clap = { version = "4.5.32", features = ["derive", "env"] }
num_cpus = "1.16.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "all-databases"] }
mimalloc = { version = "0.1.44", optional = true }
rand = "0.9.0"
actix-governor = "0.8.0"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
], optional = true }
serde_json = { version = "1.0.140", optional = true }
sea-query = "0.32.4"


[profile.release]
panic = "abort"
